manifests/portfolio/portfolio.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio

---
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: portfolio
spec:
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  namespace: portfolio
  labels:
    app: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: portfolio
        image: clanktron/portfolio:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"        
        ports:
        - containerPort: 80
        imagePullPolicy: Always

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio
  namespace: portfolio
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.tls: 'true'
    flame.pawelmalak/type: app
    flame.pawelmalak/name: portfolio
    flame.pawelmalak/url: https://portfolio.claytonc.dev
    flame.pawelmalak/icon: folder-multiple-image
spec:
  tls:
  - hosts:
      - portfolio.claytonc.dev
    secretName: portfolio-tls
  rules:
    - host: portfolio.claytonc.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio
                port:
                  number: 80
